--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,6 @@ strong {
   font-weight: 600;
 }
 
-
 .App {
   font-family: sans-serif;
   text-align: center;
@@ -39,4 +38,12 @@ strong {
   width: 456px;
   height: 3px;
   background-color: #007bff;
+}
+
+.card {
+  transition: box-shadow 0.3s ease;
+}
+
+.card:hover {
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
